--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -12,9 +12,9 @@
 #mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jeesite?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
 
 #mssql database settings
 #jdbc.type=mssql
@@ -32,7 +32,7 @@ jdbc.pool.maxActive=20
 jdbc.testSql=SELECT 'x' FROM DUAL
 
 #redis settings
-redis.keyPrefix=jeesite
+redis.keyPrefix=ordermanage
 redis.host=127.0.0.1
 redis.port=6379
 
@@ -41,9 +41,10 @@ redis.port=6379
 #============================#
 
 #\u4ea7\u54c1\u4fe1\u606f\u8bbe\u7f6e
-productName=JeeSite \u5feb\u901f\u5f00\u53d1\u5e73\u53f0
-copyrightYear=2014
-version=V1.2.6
+productName=OrderManage \u5f00\u53d1\u540e\u53f0
+productUrl=http://www.baidu.com
+copyrightYear=2016
+version=V1.0.0
 
 #\u6f14\u793a\u6a21\u5f0f: \u4e0d\u80fd\u64cd\u4f5c\u548c\u4fdd\u5b58\u7684\u6a21\u5757\uff1a sys: area/office/user/role/menu/dict, cms: site/category
 demoMode=false
@@ -104,7 +105,7 @@ web.staticFile=.css,.js,.png,.jpg,.gif,.jpeg,.bmp,.ico,.swf,.psd,.htc,.htm,.html
 
 #\u5355\u70b9\u767b\u5f55CAS\u8bbe\u7f6e
 cas.server.url=http://127.0.0.1:8180/cas
-cas.project.url=http://127.0.0.1:8080/jeesite
+cas.project.url=http://127.0.0.1:8080/ordermanage
 
 #\u5de5\u4f5c\u6d41\u8bbe\u7f6e
 activiti.isSynActivitiIndetity=false
