--- a/pom.xml
+++ b/pom.xml
@@ -646,6 +646,14 @@
 			<version>1.13</version>
 		</dependency>
 		
+		<!--json-lib-->    
+		<dependency>    
+		    <groupId>net.sf.json-lib</groupId>    
+		    <artifactId>json-lib</artifactId>    
+		    <version>2.4</version>    
+		    <classifier>jdk15</classifier>    
+		</dependency>
+		
 		<!-- 自定义jar依赖包
 		<dependency>
 			<groupId>com.thinkgem.jeesite</groupId>
