--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -10,11 +10,18 @@
 #jdbc.password=123456
 
 #mysql database setting
+#jdbc.type=mysql
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://120.24.179.160:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
+#jdbc.username=xiaoming
+#jdbc.password=xiaoming
+
+#mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://120.24.179.160:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
-jdbc.username=xiaoming
-jdbc.password=xiaoming
+jdbc.url=jdbc:mysql://127.0.0.1:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=root
 
 #mssql database settings
 #jdbc.type=mssql
@@ -60,6 +67,9 @@ weixinPath=/weixin
 
 #\u5fae\u4fe1\u5916\u7f51\u5730\u5740
 weixinUrl=http://120.24.179.160/ordermanage/weixin/weixin
+
+#\u7cfb\u7edf\u5916\u7f51\u5730\u5740
+systemUrl=http://jansonweixin.ngrok.cc/ordermanage
 
 #\u7f51\u7ad9URL\u540e\u7f00
 urlSuffix=.html
