--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -10,18 +10,18 @@
 #jdbc.password=123456
 
 #mysql database setting
-#jdbc.type=mysql
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://120.24.179.160:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
-#jdbc.username=xiaoming
-#jdbc.password=xiaoming
-
-#mysql database setting
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://120.24.179.160:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
+jdbc.username=xiaoming
+jdbc.password=xiaoming
+
+#mysql database setting
+#jdbc.type=mysql
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://127.0.0.1:3306/ordermanage?useUnicode=true&characterEncoding=utf-8
+#jdbc.username=root
+#jdbc.password=root
 
 #mssql database settings
 #jdbc.type=mssql
