--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -70,7 +70,7 @@ weixinPath=/weixin
 weixinUrl=http://120.24.179.160/ordermanage/weixin/weixin
 
 #\u7cfb\u7edf\u5916\u7f51\u5730\u5740
-systemUrl=http://jansonweixin.ngrok.cc/ordermanage
+systemUrl=http://www.xmdream.com.cn/ordermanage
 
 #\u7f51\u7ad9URL\u540e\u7f00
 urlSuffix=.html
