--- a/src/main/resources/weixin.properties
+++ b/src/main/resources/weixin.properties
@@ -1,6 +1,6 @@
 
 #\u5fae\u4fe1\u5916\u7f51\u5730\u5740
-weixinUrl=http://jansonweixin.ngrok.cc/ordermanage/weixin/weixin
+weixinUrl=http://www.xmdream.com.cn/ordermanage/weixin/weixin
 
 #token
 token=xiaoming
