--- a/src/main/resources/jeesite.properties
+++ b/src/main/resources/jeesite.properties
@@ -67,7 +67,7 @@ frontPath=/f
 weixinPath=/weixin
 
 #\u7cfb\u7edf\u5916\u7f51\u5730\u5740
-systemUrl=http://www.xmdream.com.cn/ordermanage
+systemUrl=http://jc.xmdream.com.cn/ordermanage
 
 #\u7f51\u7ad9URL\u540e\u7f00
 urlSuffix=.html
