--- a/src/main/resources/weixin.properties
+++ b/src/main/resources/weixin.properties
@@ -6,10 +6,16 @@ weixinUrl=http://jc.xmdream.com.cn/ordermanage/weixin/weixin
 token=xiaoming
 
 #appid
-appid=wxc9ee202df971cdc3
+appid=wxb0247c46978603c5
 
 #appsecret
-appsecret=7b35fff7bf15866fb65cfff4a39b0bd4
+appsecret=f9b2e8e0990078b58c7aa460d24030b2
+
+#appid
+#appid=wxc9ee202df971cdc3
+#
+#appsecret
+#appsecret=7b35fff7bf15866fb65cfff4a39b0bd4
 
 #partner
 partner=1286958401
